fix section overflow
use lib 0.4.2

--- a/newtabgen/res/styles.scss
+++ b/newtabgen/res/styles.scss
@@ -226,7 +226,7 @@ section {
     flex: 1;
     display: inline-flex;
     flex-flow: column nowrap;
-    height: min-content;
+    max-height: min-content;
     max-width: 40rem;
 
     + section {
